--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 Babel==0.9.6
 Fabric==1.5.3
-Flask==0.9
+Flask ~> 0.12.3
 Flask-Babel==0.8
 Flask-FlatPages==0.3
 Frozen-Flask==0.9
@@ -10,7 +10,7 @@ PyYAML==3.10
 Werkzeug==0.8.3
 argparse==1.2.1
 distribute==0.6.24
-paramiko==1.9.0
+paramiko ~> 2.0.9
 pycrypto==2.6
 pytz==2012j
 speaklater==1.3
